# template-axum-lambda-monolith

./: .gitignore  Cargo.toml  LICENSE  README.md  cat_rs_code.sh  deny.toml  flake.nix  local-env.json  local-env.json.example  samconfig.toml  template-cognito-auth.yaml  template.yaml
notes/: to_templating.md
rust_app/: Cargo.toml
rust_app/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs
rust_app/src/routes/: foo.rs  health.rs  mixed.rs  mod.rs  parameters.rs  root.rs
src/: auth.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  middleware.rs
src/auth/: cognito_middleware.rs  mod.rs  secret_auth_middleware.rs
src/models/: item.rs  user.rs
src/routes/: foo.rs  health.rs  mod.rs  parameters.rs  root.rs  user.rs
