[package]
name = "nxtpoll-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
jsonwebtokens-cognito = "0.1.1"
lambda_http = "0.12.0"
lambda_runtime = "0.6.0"
once_cell = "1.19.0"
reqwest = {version = "0.12.5", features = ["json"]}
serde = "1.0.136"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.10.0" , features = ["v4"] }
